# Sentinel

./: .editorconfig  .gitattributes  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Jenkinsfile  LICENSE  Makefile  PHASE1_COMPLETE.md  PHASE1_SUMMARY.md  PHASE_4_PLAN.md  PHASE_5_PLAN.md  README.md  RELEASE_v0.3.0.md  ROADMAP.md  TESTING.md  docker-compose.yml  pytest.ini
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/workflows/: ci.yml  patchbot-test.yml  release.yml
agents/patchbot/: Dockerfile  README.md  pyproject.toml
agents/patchbot/patchbot/: __init__.py  agent.py  analyzer.py  config.py  fixer.py  git_manager.py
charts/: README.md
charts/sentinel-agent/: Chart.yaml  values.yaml
charts/sentinel-agent/templates/: _helpers.tpl  daemonset.yaml  rbac.yaml  serviceaccount.yaml
charts/sentinel-core/: Chart.yaml  values.yaml
charts/sentinel-core/templates/: _helpers.tpl  control-api-deployment.yaml  control-api-service.yaml  rbac.yaml  serviceaccount.yaml
deploy/docker-compose/: README.md  docker-compose.yml
deploy/docker-compose/alertmanager/: alertmanager.yml
deploy/docker-compose/grafana/dashboards/: sentinel-overview.json
deploy/docker-compose/grafana/provisioning/dashboards/: default.yml
deploy/docker-compose/postgres/: init.sql
deploy/docker-compose/prometheus/: alerts.yml  prometheus.yml
deploy/docker-compose/vault/policies/: sentinel-dev.hcl
deploy/k8s/: cert-manager.yaml  mtls-config.yaml  vault.yaml
deploy/observability/: prometheus.yml
deploy/observability/dashboards/: gpu-fleet.json  sre-overview.json  workload-health.json
docs/: PATCHBOT_TESTING_GUIDE.md  PHASE_5_AGENT_ORCHESTRATION.md  README.md
docs/architecture/: README.md
docs/guides/: development.md  quickstart-patchbot.md
docs/runbooks/: high-rollback-rate.md  incident-response.md
docs/security/: mtls-guide.md
libs/agent-sdk/: README.md  pyproject.toml
libs/agent-sdk/agent_sdk/: __init__.py  client.py  models.py
libs/k8s-driver/: pyproject.toml
libs/k8s-driver/sentinel_k8s/: __init__.py  canary.py  cluster.py  deployments.py  health.py  jobs.py  models.py  statefulsets.py  watch.py
libs/k8s-driver/tests/: __init__.py  conftest.py  test_deployments.py
libs/policy-engine/: pyproject.toml
libs/policy-engine/sentinel_policy/: __init__.py  engine.py  models.py  rate_limiter.py
libs/policy-engine/tests/: __init__.py  conftest.py  test_change_freeze.py  test_engine.py  test_rate_limiter.py  test_shadow_mode.py
libs/sentinel-common/: pyproject.toml
libs/sentinel-common/sentinel_common/: mtls.py  vault.py
proto/: sentinel.proto
scripts/: generate-proto.bat  generate-proto.sh  test-patchbot.sh
services/agent/: .golangci.yml  Dockerfile  README.md  config.example.yaml  go.mod
services/agent-controller/: Dockerfile  README.md  pyproject.toml
services/agent-controller/app/: __init__.py  config.py  database.py  main.py
services/agent-controller/app/models/: __init__.py  database.py  schemas.py
services/agent-controller/app/routes/: __init__.py  agents.py  tasks.py
services/agent-controller/app/services/: __init__.py  agent_registry.py  task_manager.py  task_queue.py
services/agent-controller/tests/: __init__.py  test_agent_registry.py  test_main.py
services/agent/cmd/agent/: main.go
services/agent/internal/collector/: collector.go  collector_test.go  gpu.go  gpu_stub.go  system.go
services/agent/internal/config/: config.go  config_test.go
services/agent/internal/metrics/: server.go
services/control-api/: Dockerfile  README.md  pyproject.toml
services/control-api/app/: __init__.py  main.py
services/control-api/app/api/v1/: action_plans.py  auth.py  deployments.py  policies.py  workloads.py
services/control-api/app/core/: config.py  database.py  events.py  mtls.py  rbac.py  security.py
services/control-api/app/crud/: __init__.py  action_plans.py  audit_logs.py  base.py  clusters.py  deployments.py  policies.py  users.py  workloads.py
services/control-api/app/models/: database.py  rbac.py  schemas.py
services/control-api/app/services/: __init__.py  plan_executor.py  rollback_controller.py
services/control-api/tests/: __init__.py  test_api.py  test_plan_executor.py
services/failure-ingestion/: Dockerfile  pyproject.toml
services/failure-ingestion/app/: __init__.py  config.py  main.py
services/failure-ingestion/app/routes/: __init__.py  github.py  gitlab.py
services/failure-ingestion/app/services/: __init__.py  agent_client.py  parser.py
services/failure-ingestion/tests/: __init__.py  test_main.py  test_parser.py
services/infra-adapter/: Dockerfile  README.md  pyproject.toml
services/infra-adapter/app/: __init__.py  adapter.py  config.py  grpc_client.py  inframind_client.py  main.py  telemetry.py
services/infra-adapter/app/proto/: __init__.py
services/infra-adapter/tests/: __init__.py  test_adapter.py  test_grpc_client.py
services/pipeline-controller/: Dockerfile  README.md  pyproject.toml
services/pipeline-controller/app/: __init__.py  config.py  controller.py  executors.py  health.py  main.py
services/pipeline-controller/tests/: __init__.py  test_controller.py
tests/: __init__.py  conftest.py  requirements.txt
tests/chaos/: network-partition.yaml  pod-failures.yaml  resource-stress.yaml
tests/integration/: test_deployment_flow.py  test_phase2_integration.py  test_shadow_execution.py
tests/load/: README.md  locustfile.py
tests/patchbot-examples/: __init__.py  example_format_errors.py  example_lint_errors.py  example_type_errors.py
